<resources>
    <string name="app_name">Paint</string>
    <string name="circle">circle</string>
    <string name="square">square</string>
    <string name="rectangle">rectangle</string>
    <string name="triangle">triangle</string>
    <string name="ellipse">ellipse</string>
    <string name="removeToolbar">removeToolbar</string>
    <string name="shapes">shapes</string>
    <string name="path">path</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="save">save</string>
    <string name="share">share</string>
    <string name="delete">delete</string>
    <string name="copy">copy</string>
    <string name="resize">resize</string>
    <string name="move">move</string>
    <string name="paintpalette">paintpalette</string>
</resources>
