<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/transparent"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:tag="@string/delete"
            android:background="@drawable/ic_delete"
            android:onClick="setEditBtnSelected"/>

        <ImageButton
            android:id="@+id/copy"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_copy"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:tag="@string/copy"
            android:onClick="setEditBtnSelected"/>

        <ImageButton
            android:id="@+id/resize"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_resize"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:tag="@string/resize"
            android:onClick="setEditBtnSelected"/>


        <ImageButton
            android:id="@+id/move"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_drag"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:tag="@string/move"
            android:onClick="setEditBtnSelected"/>


        <ImageButton
            android:id="@+id/paintpalette"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_paintpalette"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:tag="@string/paintpalette"
            android:onClick="setColor"/>


    </LinearLayout>

</RelativeLayout>