<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/popupWindow"
    android:background="@drawable/transparentbg">
<!--todo add tags (done by sarah)-->
    <ImageButton
        android:id="@+id/circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_circle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:tag="@string/circle"
        android:onClick="setBtnSelected"
        android:layout_alignParentStart="true" />
    <ImageButton
        android:id="@+id/square"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/circle"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_square"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:tag="@string/square"
        android:onClick="setBtnSelected"
        android:layout_toEndOf="@id/circle" />
    <ImageButton
        android:id="@+id/rectangle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/square"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_rectangular"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:tag="@string/rectangle"
        android:onClick="setBtnSelected"
        android:layout_toEndOf="@id/square" />
    <ImageButton
        android:id="@+id/triangle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/circle"
        android:layout_alignParentLeft="true"
        android:background="@drawable/ic_triangle"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:tag="@string/triangle"
        android:onClick="setBtnSelected"
        android:layout_alignParentStart="true" />
    <ImageButton
        android:id="@+id/ellipse"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/triangle"
        android:layout_below="@id/square"
        android:background="@drawable/ic_ellipse"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:layout_toEndOf="@id/triangle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:tag="@string/ellipse"/>

</RelativeLayout>